rgw_rados: create sync module instances only if run_sync_thread is set

This allows for radosgw-admin to run even if there was a
misconfiguration in setting tier types which would otherwise make it
difficult to revert an invalid tier type setting. Since sync modules are
necessary only for rgw and not for the admin itself, this allows for
invalid tier configurations to be corrected as rgw-admin wouldn't fail

Fixes: http://tracker.ceph.com/issues/19830
Signed-off-by: Abhishek Lekshmanan <abhishek@suse.com>